add-good implementation

--- a/src/app/modules/dashboard/locataire/locataire.component.html
+++ b/src/app/modules/dashboard/locataire/locataire.component.html
@@ -12,7 +12,7 @@
             <h2 id="products-heading" class="sr-only">Products</h2>
             <div class="grid grid-cols-12 lg:grid-cols-12 lg:gap-x-8 gap-y-10 ">
               <!-- Filters -->
-              <form class="hidden rounded-lg lg:block hidden  lg:col-span-3 col-span-none bg-white px-4 pt-3">
+              <form class="hidden rounded-lg lg:block   lg:col-span-3 col-span-none bg-white px-4 pt-3">
                 <h3>Filtrer les résultats</h3>
                 <ul role="list" class="text-sm font-medium text-gray-900 space-y-4 pb-6 border-b border-gray-200">
                   <h3 class="mt-3">
@@ -74,48 +74,49 @@
 
 
                       <div class="flex items-center">
-                        <input id="filter-color-1" name="color[]" value="beige" type="checkbox"
-                          class="h-4 w-4 border-gray-300 rounded text-indigo-600 focus:ring-indigo-500">
+                        <input type="checkbox"
+                          class="form-checkbox text-blue-2 focus:ring-0 border-gray-300 p-2 rounded-md 	" checked>
                         <label for="filter-color-1" class="ml-3 text-sm text-gray-600">
                           Appartements
                         </label>
                       </div>
 
                       <div class="flex items-center">
-                        <input id="filter-color-2" name="color[]" value="blue" type="checkbox" checked
-                          class="h-4 w-4 border-gray-300 rounded text-indigo-600 focus:ring-indigo-500">
+                        <input type="checkbox"
+                          class="form-checkbox text-blue-2 focus:ring-0 border-gray-300 p-2 rounded-md 	" checked>
                         <label for="filter-color-2" class="ml-3 text-sm text-gray-600">
                           Villa/Maison
                         </label>
                       </div>
 
                       <div class="flex items-center">
-                        <input id="filter-color-3" name="color[]" value="brown" type="checkbox"
-                          class="h-4 w-4 border-gray-300 rounded text-indigo-600 focus:ring-indigo-500">
+                        <input type="checkbox"
+                          class="form-checkbox text-blue-2 focus:ring-0 border-gray-300 p-2 rounded-md 	" checked>
                         <label for="filter-color-3" class="ml-3 text-sm text-gray-600">
                           Meublé
                         </label>
                       </div>
 
                       <div class="flex items-center">
-                        <input id="filter-color-4" name="color[]" value="green" type="checkbox"
-                          class="h-4 w-4 border-gray-300 rounded text-indigo-600 focus:ring-indigo-500">
+                        <input type="checkbox"
+                          class="form-checkbox text-blue-2 focus:ring-0 border-gray-300 p-2 rounded-md 	" checked>
                         <label for="filter-color-4" class="ml-3 text-sm text-gray-600">
                           Bureau
                         </label>
                       </div>
 
                       <div class="flex items-center">
-                        <input id="filter-color-5" name="color[]" value="purple" type="checkbox"
-                          class="h-4 w-4 border-gray-300 rounded text-indigo-600 focus:ring-indigo-500">
+                        <input type="checkbox"
+                          class="form-checkbox text-blue-2 focus:ring-0 border-gray-300 p-2 rounded-md 	" checked>
                         <label for="filter-color-5" class="ml-3 text-sm text-gray-600">
                           Dépots
                         </label>
                       </div>
 
                       <div class="flex items-center">
-                        <input id="filter-color-0" name="color[]" value="white" type="checkbox"
-                          class="h-4 w-4 border-gray-300 rounded text-indigo-600 focus:ring-indigo-500">
+                        <input type="checkbox"
+                          class="form-checkbox text-blue-2 focus:ring-0 border-gray-300 p-2 rounded-md 	" checked>
+
                         <label for="filter-color-0" class="ml-3 text-sm text-gray-600">
                           Ateliers
                         </label>
@@ -123,24 +124,26 @@
 
 
                       <div class="flex items-center">
-                        <input id="filter-color-0" name="color[]" value="white" type="checkbox"
-                          class="h-4 w-4 border-gray-300 rounded text-indigo-600 focus:ring-indigo-500">
+                        <input type="checkbox"
+                          class="form-checkbox text-blue-2 focus:ring-0 border-gray-300 p-2 rounded-md 	" checked>
+
                         <label for="filter-color-0" class="ml-3 text-sm text-gray-600">
                           Terrains
                         </label>
                       </div>
 
                       <div class="flex items-center">
-                        <input id="filter-color-0" name="color[]" value="white" type="checkbox"
-                          class="h-4 w-4 border-gray-300 rounded text-indigo-600 focus:ring-indigo-500">
+                        <input type="checkbox"
+                          class="form-checkbox text-blue-2 focus:ring-0 border-gray-300 p-2 rounded-md 	" checked>
+
                         <label for="filter-color-0" class="ml-3 text-sm text-gray-600">
                           Logement vacance
                         </label>
                       </div>
 
                       <div class="flex items-center">
-                        <input id="filter-color-0" name="color[]" value="white" type="checkbox"
-                          class="h-4 w-4 border-gray-300 rounded text-indigo-600 focus:ring-indigo-500">
+                        <input type="checkbox"
+                          class="form-checkbox text-blue-2 focus:ring-0 border-gray-300 p-2 rounded-md 	" checked>
                         <label for="filter-color-0" class="ml-3 text-sm text-gray-600">
                           Parkings
                         </label>
@@ -187,47 +190,47 @@
                   <div class="pt-6" id="filter-section-1">
                     <div class="space-y-4">
                       <div class="flex items-center">
-                        <input id="filter-category-0" name="category[]" value="new-arrivals" type="checkbox"
-                          class="h-4 w-4 border-gray-300 rounded text-indigo-600 focus:ring-indigo-500">
+                        <input type="checkbox"
+                          class="form-checkbox text-blue-2 focus:ring-0 border-gray-300 p-2 rounded-md 	" checked>
                         <label for="filter-category-0" class="ml-3 text-sm text-gray-600">
                           Studio à 1 pièce
                         </label>
                       </div>
 
                       <div class="flex items-center">
-                        <input id="filter-category-1" name="category[]" value="sale" type="checkbox"
-                          class="h-4 w-4 border-gray-300 rounded text-indigo-600 focus:ring-indigo-500">
+                        <input type="checkbox"
+                          class="form-checkbox text-blue-2 focus:ring-0 border-gray-300 p-2 rounded-md 	" checked>
                         <label for="filter-category-1" class="ml-3 text-sm text-gray-600">
                           2 pièces
                         </label>
                       </div>
 
                       <div class="flex items-center">
-                        <input id="filter-category-2" name="category[]" value="travel" type="checkbox" checked
-                          class="h-4 w-4 border-gray-300 rounded text-indigo-600 focus:ring-indigo-500">
+                        <input type="checkbox"
+                          class="form-checkbox text-blue-2 focus:ring-0 border-gray-300 p-2 rounded-md 	" checked>
                         <label for="filter-category-2" class="ml-3 text-sm text-gray-600">
                           Travel
                         </label>
                       </div>
 
                       <div class="flex items-center">
-                        <input id="filter-category-3" name="category[]" value="organization" type="checkbox"
-                          class="h-4 w-4 border-gray-300 rounded text-indigo-600 focus:ring-indigo-500">
+                        <input type="checkbox"
+                          class="form-checkbox text-blue-2 focus:ring-0 border-gray-300 p-2 rounded-md 	" checked>
                         <label for="filter-category-3" class="ml-3 text-sm text-gray-600">
                           3 pièces
                         </label>
                       </div>
 
                       <div class="flex items-center">
-                        <input id="filter-category-4" name="category[]" value="accessories" type="checkbox"
-                          class="h-4 w-4 border-gray-300 rounded text-indigo-600 focus:ring-indigo-500">
+                        <input type="checkbox"
+                          class="form-checkbox text-blue-2 focus:ring-0 border-gray-300 p-2 rounded-md 	" checked>
                         <label for="filter-category-4" class="ml-3 text-sm text-gray-600">
                           4 pièces
                         </label>
                       </div>
                       <div class="flex items-center">
-                        <input id="filter-category-5" name="category[]" value="accessories" type="checkbox"
-                          class="h-4 w-4 border-gray-300 rounded text-indigo-600 focus:ring-indigo-500">
+                        <input type="checkbox"
+                          class="form-checkbox text-blue-2 focus:ring-0 border-gray-300 p-2 rounded-md 	">
                         <label for="filter-category-5" class="ml-3 text-sm text-gray-600">
                           5 pièces et plus
                         </label>
@@ -274,48 +277,48 @@
                   <div class="pt-6" id="filter-section-2">
                     <div class="space-y-4">
                       <div class="flex items-center">
-                        <input id="filter-size-0" name="size[]" value="2l" type="checkbox"
-                          class="h-4 w-4 border-gray-300 rounded text-indigo-600 focus:ring-indigo-500">
+                        <input type="checkbox"
+                          class="form-checkbox text-blue-2 focus:ring-0 border-gray-300 p-2 rounded-md 	">
                         <label for="filter-size-0" class="ml-3 text-sm text-gray-600">
                           10 m2
                         </label>
                       </div>
 
                       <div class="flex items-center">
-                        <input id="filter-size-1" name="size[]" value="6l" type="checkbox"
-                          class="h-4 w-4 border-gray-300 rounded text-indigo-600 focus:ring-indigo-500">
+                        <input type="checkbox"
+                          class="form-checkbox text-blue-2 focus:ring-0 border-gray-300 p-2 rounded-md 	">
                         <label for="filter-size-1" class="ml-3 text-sm text-gray-600">
                           400 m2
                         </label>
                       </div>
 
                       <div class="flex items-center">
-                        <input id="filter-size-2" name="size[]" value="12l" type="checkbox"
-                          class="h-4 w-4 border-gray-300 rounded text-indigo-600 focus:ring-indigo-500">
+                        <input type="checkbox"
+                          class="form-checkbox text-blue-2 focus:ring-0 border-gray-300 p-2 rounded-md 	">
                         <label for="filter-size-2" class="ml-3 text-sm text-gray-600">
                           600 m2
                         </label>
                       </div>
 
                       <div class="flex items-center">
-                        <input id="filter-size-3" name="size[]" value="18l" type="checkbox"
-                          class="h-4 w-4 border-gray-300 rounded text-indigo-600 focus:ring-indigo-500">
+                        <input type="checkbox"
+                          class="form-checkbox text-blue-2 focus:ring-0 border-gray-300 p-2 rounded-md 	">
                         <label for="filter-size-3" class="ml-3 text-sm text-gray-600">
                           150 m2
                         </label>
                       </div>
 
                       <div class="flex items-center">
-                        <input id="filter-size-4" name="size[]" value="20l" type="checkbox"
-                          class="h-4 w-4 border-gray-300 rounded text-indigo-600 focus:ring-indigo-500">
+                        <input type="checkbox"
+                          class="form-checkbox text-blue-2 focus:ring-0 border-gray-300 p-2 rounded-md 	">
                         <label for="filter-size-4" class="ml-3 text-sm text-gray-600">
                           300 m2
                         </label>
                       </div>
 
                       <div class="flex items-center">
-                        <input id="filter-size-5" name="size[]" value="40l" type="checkbox" checked
-                          class="h-4 w-4 border-gray-300 rounded text-indigo-600 focus:ring-indigo-500">
+                        <input type="checkbox"
+                          class="form-checkbox text-blue-2 focus:ring-0 border-gray-300 p-2 rounded-md 	">
                         <label for="filter-size-5" class="ml-3 text-sm text-gray-600">
                           1000 m2
                         </label>
@@ -362,16 +365,16 @@
                   <div class="pt-6" id="filter-section-0">
                     <div class="space-y-4">
                       <div class="flex items-center">
-                        <input id="filter-color-0" name="color[]" value="white" type="checkbox"
-                          class="h-4 w-4 border-gray-300 rounded text-indigo-600 focus:ring-indigo-500">
+                        <input type="checkbox"
+                          class="form-checkbox text-blue-2 focus:ring-0 border-gray-300 p-2 rounded-md 	">
                         <label for="filter-color-0" class="ml-3 text-sm text-gray-600">
                           0 à 1500 CHF
                         </label>
                       </div>
 
                       <div class="flex items-center">
-                        <input id="filter-color-1" name="color[]" value="beige" type="checkbox"
-                          class="h-4 w-4 border-gray-300 rounded text-indigo-600 focus:ring-indigo-500">
+                        <input type="checkbox"
+                          class="form-checkbox text-blue-2 focus:ring-0 border-gray-300 p-2 rounded-md 	" checked>
                         <label for="filter-color-1" class="ml-3 text-sm text-gray-600">
                           1000 à 2000 CHF
 
@@ -379,8 +382,8 @@
                       </div>
 
                       <div class="flex items-center">
-                        <input id="filter-color-2" name="color[]" value="blue" type="checkbox" checked
-                          class="h-4 w-4 border-gray-300 rounded text-indigo-600 focus:ring-indigo-500">
+                        <input type="checkbox"
+                          class="form-checkbox text-blue-2 focus:ring-0 border-gray-300 p-2 rounded-md 	" checked>
                         <label for="filter-color-2" class="ml-3 text-sm text-gray-600">
                           2000 à 3000 CHF
 
@@ -388,8 +391,8 @@
                       </div>
 
                       <div class="flex items-center">
-                        <input id="filter-color-3" name="color[]" value="brown" type="checkbox"
-                          class="h-4 w-4 border-gray-300 rounded text-indigo-600 focus:ring-indigo-500">
+                        <input type="checkbox"
+                          class="form-checkbox text-blue-2 focus:ring-0 border-gray-300 p-2 rounded-md 	" checked>
                         <label for="filter-color-3" class="ml-3 text-sm text-gray-600">
                           3000 à 5000 CHF
 
