--- a/src/app/modules/shared/navbar/navbar.component.html
+++ b/src/app/modules/shared/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <!-- This example requires Tailwind CSS v2.0+ -->
-<nav class="fixed top-0 left-0 right-0 z-50	 bg-white shadow py-3 w-full">
+<nav [@slideInOut]="navbarState" class="fixed top-0 left-0 right-0 z-50	 bg-white shadow py-3 w-full">
     <div class="max-w-7xl mx-auto px-2 sm:px-6 lg:px-8 	">
         <div class="flex justify-center md:justify-between  h-16">
             <div class="hidden md:flex">
@@ -19,9 +19,8 @@
                                 alt="">
                         </button>
                     </div>
-                    <div class="origin-top-right absolute right-0 mt-2 w-48 rounded-md shadow-lg py-1 bg-white ring-1 ring-black ring-opacity-5 focus:outline-none"
-                        role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button"
-                        [@openClose]="isOpen ? true : false" tabindex="-1">
+                    <div class="origin-top-right hidden absolute right-0 mt-2 w-48 rounded-md shadow-lg py-1 bg-white ring-1 ring-black ring-opacity-5 focus:outline-none"
+                        role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1">
                         <!-- Active: "bg-gray-100", Not Active: "" -->
                         <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1"
                             id="user-menu-item-0">Your Profile</a>
@@ -40,7 +39,7 @@
                     </div>
                 </div>
                 <div class=" md:ml-4  md:flex  ml-2 ">
-                    <button type="button" (click)="open()"
+                    <button type="button" (click)="openAddMenu()"
                         class="bg-light-gray p-2 rounded-full text-gray-400 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
                         <span class="sr-only">Add menu</span>
                         <!-- Heroicon name: outline/bell -->
@@ -54,12 +53,12 @@
 
                     <!-- Profile dropdown -->
                     <div class="ml-3 relative">
-                        <div class="origin-top-right absolute right-0 mt-7 w-48 rounded-md shadow-lg py-1 bg-white ring-1 ring-black ring-opacity-5 focus:outline-none"
-                            role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button"
-                            [@openClose]="isOpen ? true : false" tabindex="-1">
+                        <div class="top-0 md:top-10 absolute  -left-full transform -translate-x-1/2 mt-7 w-48 rounded-md shadow-lg py-1 bg-white ring-1 ring-black ring-opacity-5 focus:outline-none"
+                            [@openClose]="addMenu" role="menu" aria-orientation="vertical"
+                            aria-labelledby="user-menu-button" tabindex="-1">
                             <!-- Active: "bg-gray-100", Not Active: "" -->
                             <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1"
-                                id="user-menu-item-0">Your Profile</a>
+                                id="user-menu-item-0">Your Profile 1</a>
                             <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1"
                                 id="user-menu-item-1">Settings</a>
                             <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1"
@@ -68,7 +67,7 @@
                     </div>
                 </div>
                 <div class=" flex-shrink-0 flex items-center mx-2 md:mx-0">
-                    <button type="button"
+                    <button type="button" (click)="openNotificationMenu()"
                         class="bg-light-gray p-2 rounded-full text-gray-400 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
                         <span class="sr-only">View notifications</span>
                         <!-- Heroicon name: outline/bell -->
@@ -80,7 +79,7 @@
                     </button>
 
                     <!-- Profile dropdown -->
-                    <div class="hidden md:block ml-3 relative">
+                    <div class=" md:block ml-3 relative">
                         <div>
                             <button type="button"
                                 class="bg-white rounded-full flex text-sm focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
@@ -91,16 +90,19 @@
                                     alt="">
                             </button>
                         </div>
-                        <!--   <div class="origin-top-right absolute right-0 mt-2 w-48 rounded-md shadow-lg py-1 bg-white ring-1 ring-black ring-opacity-5 focus:outline-none"
-                            role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button"
-                            [@openClose]="isOpen ? true : false" tabindex="-1">
-                            <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1"
-                                id="user-menu-item-0">Your Profile</a>
-                            <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1"
-                                id="user-menu-item-1">Settings</a>
-                            <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1"
-                                id="user-menu-item-2">Sign out</a>
-                        </div> -->
+                        <div class="ml-3 relative">
+                            <div class="top-0  absolute  -left-full transform -translate-x-1/2 mt-7 w-48 rounded-md shadow-lg py-1 bg-white ring-1 ring-black ring-opacity-5 focus:outline-none"
+                                [@openClose]="notification" role="menu" aria-orientation="vertical"
+                                aria-labelledby="user-menu-button" tabindex="-1">
+                                <!-- Active: "bg-gray-100", Not Active: "" -->
+                                <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1"
+                                    id="user-menu-item-0">Your Profile 2</a>
+                                <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1"
+                                    id="user-menu-item-1">Settings</a>
+                                <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1"
+                                    id="user-menu-item-2">Sign out</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
