--- a/src/app/modules/dashboard/bailleur/add-good/information/information.component.html
+++ b/src/app/modules/dashboard/bailleur/add-good/information/information.component.html
@@ -299,4 +299,9 @@
             <span class="absolute top-2 text-lg	 right-2 text-gray-500">m2</span>
         </div>
     </div>
+    <div class="px-3 mt-5 flex justify-end">
+        <button
+            class="text-white px-6 py-2 rounded-md font-700 text-xs md:text-base bg-blue-2 btnhover font-semibold flex flex-row items-center justify-between">Suivant</button>
+    </div>
+
 </div>
