--- a/src/assets/scss/base/_typography.scss
+++ b/src/assets/scss/base/_typography.scss
@@ -161,6 +161,9 @@
 .text-green-3{
     color: $green_3;
 }
+.bg-green-3{
+    @include bgColor($green_3);
+}
 .text-orange-1{
     color: $orange_1;
 }
