navbar user profile fix

--- a/src/app/modules/dashboard/bailleur/add-good/components/horizontal-step/horizontal-step.component.html
+++ b/src/app/modules/dashboard/bailleur/add-good/components/horizontal-step/horizontal-step.component.html
@@ -8,10 +8,11 @@
                 <span class="h-9 flex items-center">
                     <span class="relative z-10 w-8 h-8 bg-green-3 flex items-center justify-center  rounded-full ">
                         <!-- Heroicon name: solid/check -->
-                        <svg width="13" height="10" viewBox="0 0 13 10" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path
-                                d="M10.9243 0.770233L10.9243 0.770209C11.2848 0.409963 11.8691 0.40989 12.2296 0.770232L10.9243 0.770233ZM10.9243 0.770233L4.41971 7.2721L2.07576 4.9291C2.07574 4.92909 2.07573 4.92907 2.07571 4.92906C1.71523 4.56869 1.13087 4.56877 0.770432 4.92906C0.409843 5.2895 0.409876 5.87393 0.770409 6.23436L0.770432 6.23438M10.9243 0.770233L0.770432 6.23438M0.770432 6.23438L3.76711 9.2298C4.12747 9.59001 4.71191 9.59012 5.07239 9.2298L4.7311 8.88837M0.770432 6.23438L4.7311 8.88837M4.7311 8.88837L5.07239 9.2298L12.2296 2.07556L12.2296 2.07553M4.7311 8.88837L12.2296 2.07553M12.2296 2.07553C12.5901 1.71511 12.5902 1.13069 12.2296 0.770255V2.07553Z"
-                                fill="white" stroke="white" />
+                        <svg class="w-5 h-5 text-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
+                            fill="currentColor" aria-hidden="true">
+                            <path fill-rule="evenodd"
+                                d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z"
+                                clip-rule="evenodd" />
                         </svg>
 
                     </span>
