--- a/src/app/modules/shared/navbar/navbar.component.html
+++ b/src/app/modules/shared/navbar/navbar.component.html
@@ -79,7 +79,7 @@
                     </button>
 
                     <!-- Profile dropdown -->
-                    <div class=" md:block ml-3 relative">
+                    <div class="hidden md:block ml-3 relative">
                         <div>
                             <button type="button"
                                 class="bg-white rounded-full flex text-sm focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
