--- a/src/app/modules/dashboard/bailleur/add-good/price/price.component.html
+++ b/src/app/modules/dashboard/bailleur/add-good/price/price.component.html
@@ -135,8 +135,9 @@
         <div class="px-3 mt-5">
             <div class="flex flex-col md:flex-row  justify-between mt-2">
                 <div class="w-full">
-                    <h1 class="popping text-base font-semibold mb-3">Intérieur <span class="font-extralight">(Si non inclu dans le prix)
-                         </span> </h1>
+                    <h1 class="popping text-base font-semibold mb-3">Intérieur <span class="font-extralight">(Si non
+                            inclu dans le prix)
+                        </span> </h1>
                     <div class="relative">
                         <input type="number" name="email" id="email"
                             class="shadow-sm  px-4 placeholder-size-2 w-full focus:border-indigo-500 block  sm:text-sm border-gray-300 rounded-md py-3 "
@@ -149,8 +150,9 @@
 
 
                     <div class="w-full">
-                        <h1 class="popping text-base font-semibold mb-3">Extérieur <span class="font-extralight">(Si non inclu dans le prix)
-                        </span> </h1>
+                        <h1 class="popping text-base font-semibold mb-3">Extérieur <span class="font-extralight">(Si non
+                                inclu dans le prix)
+                            </span> </h1>
                         <div class="relative">
                             <input type="number" name="email" id="email"
                                 class="shadow-sm  px-4 placeholder-size-2 w-full focus:border-indigo-500 block  sm:text-sm border-gray-300 rounded-md py-3 "
@@ -162,5 +164,17 @@
             </div>
         </div>
     </div>
-
+    <div class="px-3 mt-5 flex flex-col md:flex-row justify-between">
+        <button
+            class="text-blue-2 px-6 py-2 rounded-md shadow font-700  text-base bg-white   btnhover font-semibold flex flex-row items-center justify-center">
+            <svg width="15" height="11" viewBox="0 0 15 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                    d="M3.825 6.46933L7.071 9.62524L5.657 11L4.72849e-07 5.5L5.657 -1.36883e-07L7.071 1.37476L3.832 4.52484L15 4.52484L15 6.46933L3.825 6.46933Z"
+                    fill="#6FB4E1" />
+            </svg>
+            <span class="ml-2">Précédent</span>
+        </button>
+        <button
+            class="text-white px-6 py-2 rounded-md mt-5 md:mt-0 font-700 text-base bg-blue-2 btnhover font-semibold flex flex-row items-center justify-center">Suivant</button>
+    </div>
 </div>
