--- a/src/app/modules/dashboard/bailleur/add-good/add-good-home/add-good-home.component.html
+++ b/src/app/modules/dashboard/bailleur/add-good/add-good-home/add-good-home.component.html
@@ -1,5 +1,5 @@
 <navbar></navbar>
-<div class="bg-blue1">
+<div class="bg-blue1 pb-[250px]">
     <div class="px-3 md:px-8 lg:mx-5 grid grid-cols-12  gap-4 pt-32 ">
         <div class="hidden md:block md:col-span-1 text-center"><button type="button"
                 class="inline-flex items-center p-1 border border-transparent rounded-full shadow-sm text-white bg-white shadow  focus:outline-none active:-translate-y-2 ">
