--- a/src/app/modules/dashboard/bailleur/add-good/description/description.component.html
+++ b/src/app/modules/dashboard/bailleur/add-good/description/description.component.html
@@ -1,4 +1,4 @@
-<div class=" bg-white shadow-xl pt-3 pb-10 px-3 md:px-6 pr-3 rounded-2xl ">
+<div class=" bg-white shadow-xl pt-3 pb-10 px-3 md:px-6 pr-3 rounded-2xl h-full ">
     <div class="py-5 border-b-2">
         <h1 class="popping text-xl font-bold ">Description</h1>
     </div>
